tests/integration/screens/snapshots/r#mod__integration__screens__panic_screen_test__panic_screen_snapshot_with_fixed_timestamp.snap
---
source: tests/integration/screens/panic_screen_test.rs
expression: output
---
                                                                                                                        
                                                 💥  APPLICATION PANIC 💥                                                 
                                                                                                                        
                                    We sincerely apologize for this unexpected error.                                   
                            Progress is saved per session. Current session data may be lost.                            
                                                                                                                        
┌Help──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                                                      │
│                                                   📋  Logs saved to:                                                  │
│                                      ~/.gittype/logs/gittype_YYYYMMDD_HHMMSS.log                                     │
│                                                                                                                      │
│                                                 🐛  Report this issue:                                                │
│                                    https://github.com/unhappychoice/gittype/issues                                   │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Error Details─────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                                                      │
│ Time:                                                                                                                │
│ SystemTime { tv_sec: 1700000000, tv_nsec: 0 }                                                                        │
│                                                                                                                      │
│ Panic Message:                                                                                                       │
│ Test panic message                                                                                                   │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
                                                       [ESC] Exit
